# gimli-crypto

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: changelog.yml  ci.yml  security-audit.yml
examples/: simd_vs_portable.rs
src/: aead_impl.rs  gimli.rs  hash_impl.rs  lib.rs  rustcrypto_aead.rs  rustcrypto_hash.rs
src/aead_impl/: tests.rs
src/gimli/: neon.rs  portable.rs  sse2.rs
src/hash_impl/: tests.rs
